--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -57,7 +57,7 @@
         </record>
 <!-- End Vista Kanban -->
 
-<!-- Formulario para vista kanban -->
+<!-- Formulario -->
 
       <record id="form_medios_odt" model="ir.ui.view">
             <field name="name">odt.medios.crm.lead.form</field>
@@ -78,9 +78,9 @@
                         <group>
                             <group>
                                 <field name="partner_id" string="Cliente" domain="[('customer', '=', True)]"/>
+                                <field name="marca"/>                               
                                 <field name="crm_odt_id" required="1"/>
                                 <field name="analitica" domain="[('partner_id','=',partner_id)]"/>
-                                <field name="marca"/>                               
                                 <field name="user_id" context="{'default_groups_ref': ['base.group_user', 'base.group_partner_manager', 'sales_team.group_sale_salesman_all_leads'], 'team_id': team_id}" domain="[('share', '=', False)]"/>
                                 <field name="team_id" widget="selection"/>
                                 <field name="is_blacklisted" invisible="1"/>
