Cabmbio en los comentarios analisis con vinietas

--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -667,22 +667,34 @@
                               <field name="an_otro"/>
                             </group>
                             <group>
-                              <p>
-                                HÁBITOS DE CONSUMO
+                              <p style="font-size: 9px;">
+                                HÁBITOS DE CONSUMO<br/>
+
                                 Análisis derivados del Estudio General de Medios EGM de IPSOS BIMSA
                                 (cruce de variables de hábitos de consumo de productos y consumo de Medios)
+                                <br/>
 
                                 Objetivo del análisis ¿Qué tipo de información desea conocer?
-                                Guía de temas: 
-                                Identificación de uso habitual de Medios por consumidores de determinada categoría de productos (de acuerdo a la catalogación de IPSOS).
-                                Composición demográfica de consumidor de determinada categoría de productos.
-                                Perfil psicográfico de consumidores por categorías.
-                                Share of mind marcas de cada categoría (con el límite muestral del estudio).
-                                Determinación de los medios a los que están expuestos los consumidores en determinado período, tanto penetración, como medio que influye en la decisión de compra.
-                                Lugar de compra, ciclo de compra, etc.
-                                Rankeos de medios por target y/o tipo de producto.
-                                Cruce de variables otras de medios (ejemplo viajes vs tarjeta de crédito).
-
+                                Guía de temas:<br/>
+                              <ul>
+                                <li>
+                                  Identificación de uso habitual de Medios por consumidores de determinada categoría de productos (de acuerdo a la catalogación de IPSOS).
+                                </li>
+                                <li>
+                                  Composición demográfica de consumidor de determinada categoría de productos.
+                                </li>
+                                <li>
+                                  Perfil psicográfico de consumidores por categorías.
+                                  Share of mind marcas de cada categoría (con el límite muestral del estudio).
+                                </li>
+                                <li>
+                                  Determinación de los medios a los que están expuestos los consumidores en determinado período, tanto penetración, como medio que influye en la decisión de compra.
+                                <li>
+                                  Lugar de compra, ciclo de compra, etc.
+                                  Rankeos de medios por target y/o tipo de producto.
+                                  Cruce de variables otras de medios (ejemplo viajes vs tarjeta de crédito).
+                                </li>
+                              </ul>
                               </p>
                               <field name="an_marca"/>
                               <!-- <field name="an_sector"/> -->
