--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -113,7 +113,7 @@
                                 <br/>
 
                                 <field name="presupuesto_cliente" invisible="1"/>
-                                <field name="medios"/>
+                                <field name="medios" required="1"/>
                                 <field name="med_tipo_trabajo"  widget="radio" options="{'horizontal': true}"/>
                                 <field name="notast"/>
                                 <div attrs="{'invisible':[('med_tipo_trabajo','!=','1')]}">
@@ -129,28 +129,36 @@
                                 <field name="project" invisible="1"/>
                             </group>
 
-                            <group>
-
-                                <field name="med_spot_tv_abierta" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_aaee_tv" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_spoteo_carriers" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_net_televisa" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_otros_net" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_radio" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_revista" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_prensa" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_ooh" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_digital" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <field name="med_analisis"  invisible="1" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-<!--                                   <field name="med_analisis" />
- -->                                <field name="lost_reason" invisible="1"/>
-                                <field name="date_conversion" invisible="1"/>
-
+                            <group colspan="4">
+                                <group>
+                                   <group>
+                                    <field name="med_spot_tv_abierta" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_aaee_tv" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_spoteo_carriers" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                   </group>
+                                   <group>
+                                    <field name="med_net_televisa" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_otros_net" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_radio" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                   </group>
+                                  </group>
+                                  <group>
+                                   <group>
+                                    <field name="med_revista" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_prensa" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_ooh" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                   </group>
+                                   <group>
+                                    <field name="med_digital" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="med_analisis"  invisible="1" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
+                                    <field name="lost_reason" invisible="1"/>
+                                    <field name="date_conversion" invisible="1"/>
+                                   </group>
+                                  </group>
                             </group>
 
                         </group>
                        <notebook colspan="4">
-
                        <!-- Page de Medios en ODT -->
                         <page name="medios" string="Medios">
                           <group>
@@ -159,10 +167,9 @@
 <!--                               <field name="med_folio"/>
                               <field name="med_fecha_soli"/> -->
                               <!-- <field name="med_hora_soli"  widget="float_time"/> -->
-
-                              <field name="med_fecha_real"/>
+                              <field name="med_fecha_estimada_enterga"/>
                               <field name="med_fecha_entrega"/>
-
+                              <field name="med_fecha_real"/>
                               <!-- <field name="med_elabora"/> -->
                               <field name="med_nivel_complejidad"/>
                             </group>
@@ -181,12 +188,12 @@
                           </group>
                         </page>
                         <page name="medios_tv_abierta" string="Spot TV Abierta TVSA" attrs="{'invisible': [('med_spot_tv_abierta','=',False)]}">
-                          <group string="Solicitud plan de Medios/ Televisa Spoteo TV Abierta Nacional y/o Local">
+                          <group string="Televisa Spoteo TV Abierta Nacional y/o Local">
                             <group>
                               <field name="tvsa_tipo_camp"/>
                               <field name="tvsa_otro"/>
                               <field name="tvsa_catego_televisa"/>
-                            <h3>Creacion de Target Primario</h3>
+                            <h3>Target de planeación</h3>
                               <field name="tvsa_nse_1"/>
                               <field name="tvsa_nse_2"/>
                               <field name="tvsa_nse_3"/>
@@ -218,7 +225,6 @@
                             <h3>Tv Abierta Nacional</h3>
                             <h5>Duracion Spot</h5>
                               <field name="duracion_spot_1"/>
-                              <field name="duracion_spot_1"/>
                               <field name="duracion_spot_2"/>
                               <field name="duracion_spot_3"/>
                               <field name="duracion_spot_4"/>
@@ -229,6 +235,7 @@
                               <field name="mixto_proporcion"/>
                               <field name="target_compra_modulo"/>
                               <field name="target_especial"/>
+                               <h3>Regulación</h3>
                               <field name="cofepris"/>
                               <field name="a_favor"/>
                               <field name="kids_policy"/>
@@ -550,7 +557,7 @@
                                       <field name="tabla_medios_radio" widget="one2many_list">
                                         <tree editable="bottom">
                                             <field name="plaza"/>
-                                            <field name="tipo"/>
+                                            <field name="tipo" widget="many2many_tags"/>
                                             <field name="otro"  attrs="{'readonly' : [('tipo','!=','7')]}"/>
                                             <field name="duracionn"/>
                                         </tree>
@@ -597,10 +604,45 @@
                             <group>
                               <field name="oh_marca"/>
                               <field name="oh_target_interes"/>
+                              <field name="oh_zona_interes"/>
                               <field name="oh_periodo_campana"/>
                               <field name="oh_monto_inversion"/>
                             </group>
                           </group>
+                            <group colspan="4">
+                                <group>
+                                    <group>
+                                        <field name="Espectaculaes"/>
+                                        <field name="Pantallas"/>
+                                        <field name="Muros"/>
+                                        <field name="Vallas"/>
+                                        <field name="Parabuses"/>
+
+                                    </group>
+                                    <group>
+                                        <field name="Puentes"/>
+                                        <field name="Tren"/>
+                                        <field name="Metrobús"/>
+                                        <field name="Metro"/>
+                                        <field name="Mexibus"/>
+                                    </group>
+                                </group>
+                                <group>
+                                   <group>
+                                        <field name="Mupis"/>
+                                        <field name="Camiones"/>
+                                        <field name="escolares"/>
+                                        <field name="Taxis"/>
+                                        <field name="Aeropuerto"/>
+                                    </group>
+                                    <group>
+                                        <field name="interiores"/>
+                                        <field name="Plazas"/>
+                                        <field name="Bajo"/>
+                                        <field name="Otros"/>
+                                    </group>
+                                </group>
+                            </group>
                             <group>
                               <page name="page_medios_ooh" string="Cotizacion">
                                   <field name="tabla_medios_ooh" widget="one2many_list">
@@ -634,22 +676,23 @@
                               <field name="d_target_perfil"/>
                               <field name="d_objetivo_campana"/>
                             </group>
-                            <group string="Finalidad*">
-                              <div class="text-muted">
-                                Puede señalar más de uno.
-                              </div>
-                              <field name="d_option1"/>
-                              <field name="d_option2"/>
-                              <field name="d_option3"/>
-                              <field name="d_option4"/>
-                              <field name="d_landing"/>
-                              <field name="d_description_campana"/>
-                              <field name="d_requerirlos"/>
+                            <group >
+                                <field name="d_monto_minimo"/>
+
+<!--                              <div class="text-muted">-->
+<!--                                Puede señalar más de uno.-->
+<!--                              </div>-->
+<!--                              <field name="d_option1"/>-->
+<!--                              <field name="d_option2"/>-->
+<!--                              <field name="d_option3"/>-->
+<!--                              <field name="d_option4"/>-->
+<!--                              <field name="d_landing"/>-->
+<!--                              <field name="d_description_campana"/>-->
+<!--                              <field name="d_requerirlos"/>-->
                             </group>
                             <group>
                               <!-- <field name="d_folio_proyecto"/> -->
-                              <field name="d_monto_maximo"/>
-                              <field name="d_monto_minimo"/>
+<!--                              <field name="d_monto_maximo"/>-->
                               <p invisible="1">
                                 Notas:<br/>
                                 1.- No se iniciará la planeación si no existe monto de inversión.
@@ -661,7 +704,7 @@
                         <page name="medios_analisis" string="Analisis" attrs="{'invisible': [('med_analisis','=',False),('med_tipo_trabajo','!=','2')]}">
                           <group>
                             <group>
-                              <p>Tipo de Analisis</p>
+                              <h3>Tipo de Analisis</h3>
                               <field name="tip_analisis" invisible="1"/>
                               <field name="an_inversion"/>
                               <field name="an_habitos"/>
@@ -699,10 +742,10 @@
                                 </li>
                               </ul>
                               </p>
-                              <field name="an_marca"/>
+<!--                              <field name="an_marca"/>-->
                               <!-- <field name="an_sector"/> -->
-                              <field name="an_categoria" attrs="{'invisible': [('med_analisis','=',False)]}"/>
-                              <field name="an_cat_otros" invisible="1"/>
+<!--                              <field name="an_categoria" attrs="{'invisible': [('med_analisis','=',False)]}"/>-->
+<!--                              <field name="an_cat_otros" invisible="1"/>-->
                             </group>
                             <group string="Inversión Publicitaria (Competencia) IBOPE" attrs="{'invisible': [('an_inversion','=',False)]}">
                               <h3>Periodo</h3>
@@ -719,7 +762,7 @@
                               <field name="an_periodo1" attrs="{'invisible': [('periodos_audiencias','!=','3')]}"/>
                               <field name="an_target_interes"/>
                               <field name="an_analisis1"/>
-                              <field name="periodos_audiencias" widget="radio"/>
+                              <field name="periodos_audiencias" widget="radio" required="1"/>
                             </group>
                             <group string="Hábitos de consumo (BIMSA)" attrs="{'invisible': [('an_habitos','=',False)]}">
                               <field name="an_marca1"/>
@@ -784,6 +827,8 @@
                 </search>
             </field>
         </record>
+
+
 
 
 
